Implement logic in transport